--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
       
       <ul class="nav__ul">
         <a href="#home"  class="footlist"><li><i class='bx bxs-chevron-right-circle bx-fw'></i>Home</li></a>
-        <a href="#about" class="footlist"><li ><i class='bx bxs-chevron-right-circle bx-fw'></i>About</li></a>
-        <a href="#skill" class="footlist"><li ><i class='bx bxs-chevron-right-circle bx-fw'></i>Skill</li></a>
+        <a href="#about" class="footlist"><li ><i class='bx bxs-chevron-right-circle bx-fw'></i>About Me</li></a>
+        <a href="#skill" class="footlist"><li ><i class='bx bxs-chevron-right-circle bx-fw'></i>Corriculum Vitae</li></a>
         <a href="#education" class="footlist"><li class="footlist"><i class='bx bxs-chevron-right-circle bx-fw'></i>Education</li></a>
-        <a href="#hobbies" class="footlist"><li ><i class='bx bxs-chevron-right-circle bx-fw'></i>Hobbies</li></a>
+        <a href="#hobbies" class="footlist"><li ><i class='bx bxs-chevron-right-circle bx-fw'></i>Passion and Interest</li></a>
         <a href="#contact" class="footlist"><li><i class='bx bxs-chevron-right-circle bx-fw'></i>Contact</li></a>
       </ul>
     </li>
